[tool.poetry]
name = "bullcheese"
version = "1.0.0"
description = "A trusted third party for Minecraft Filtered Seed Glitchless speedrunning."
authors = ["hjhornbeck"]
license = "CC-BY-SA 4.0"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "1.1.2"
cryptography = "^3.4.7"
filelock = "^3.0.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
